--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 }
 
 body {
-	background-color: green;
+	background-color: rgba(0, 0, 0, 0.221);
+	/*animation: rainbow-bg 10s linear;
+	animation-iteration-count: infinite;*/
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
@@ -13,12 +15,80 @@ body {
 	align-items: flex-start;
 }
 
-#scoreDisplay {
+
+#canvasGame {
+	border: 4px solid rgb(0, 0, 0);
+	position: absolute;
+	height: 80%;
+	width: 80%;
+}
+
+@keyframes rainbow-bg{
+	100%,0%{
+		background-color: rgb(255,0,0);
+	}
+	8%{
+		background-color: rgb(255,127,0);
+	}
+	16%{
+		background-color: rgb(255,255,0);
+	}
+	25%{
+		background-color: rgb(127,255,0);
+	}
+	33%{
+		background-color: rgb(0,255,0);
+	}
+	41%{
+		background-color: rgb(0,255,127);
+	}
+	50%{
+		background-color: rgb(0,255,255);
+	}
+	58%{
+		background-color: rgb(0,127,255);
+	}
+	66%{
+		background-color: rgb(0,0,255);
+	}
+	75%{
+		background-color: rgb(127,0,255);
+	}
+	83%{
+		background-color: rgb(255,0,255);
+	}
+	91%{
+		background-color: rgb(255,0,127);
+	}
+	
+}
+.pixngun {
+	font-size: 70px;
+	color:rgb(0, 0, 0);
+	
+}
+.bigbutton{
 	width: 300px;
-	height: 50px;
-	background: red;
-	transform: perspective(10px) rotateX(5deg);
-    /*transform: scaleY(-1);*/
-	margin: 0;
-	/*outline: 1px solid black;*/
+	height: 100px;
+}
+
+.btn{
+	background-color: rgb(255, 255, 255);
+	color:rgb(0, 0, 0);
+	border-radius: 50px;
+	transition: 200ms;
+	box-shadow: rgb(173, 207, 255) 0 -12px 6px inset;
+}
+.btn:hover{
+	background-image: linear-gradient(144deg,rgb(173, 207, 255), #ffffff 50%,#060606);
+}
+
+.modal-body img{
+	width: 100%;
+	height: 100%;
+	margin: auto;
+}
+.modal-body button{
+	height: 250px;
+	width: 100px;
 }
