--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 * {
 	margin: 0px;
 	padding: 0px;
+	font-family: cursive, 'Times New Roman', 'Arial';
 }
-
 body {
-	background-color: rgba(0, 0, 0, 0.221);
+	background-color: rgba(0, 0, 0, 0.87);
 	/*animation: rainbow-bg 10s linear;
 	animation-iteration-count: infinite;*/
 	display: flex;
@@ -17,9 +17,7 @@ body {
 
 #canvasGame {
 	border: 4px solid rgb(0, 0, 0);
-	position: absolute;
-	height: 80%;
-	width: 80%;
+	padding: 0%;
 }
 
 @keyframes rainbow-bg{
@@ -61,9 +59,9 @@ body {
 	}
 	
 }
-.pixngun {
-	font-size: 70px;
-	color:rgb(0, 0, 0);
+.title {
+	color:rgb(255, 255, 255);
+	text-shadow: 5px 4px 2px rgb(4, 0, 128), 0 0 1em blue, 0 0 0.2em rgb(59, 0, 254);
 	
 }
 .bigbutton{
@@ -75,19 +73,87 @@ body {
 	background-color: rgb(255, 255, 255);
 	color:rgb(0, 0, 0);
 	border-radius: 50px;
-	transition: 200ms;
-	box-shadow: rgb(173, 207, 255) 0 -12px 6px inset;
 }
 .btn:hover{
-	background-image: linear-gradient(144deg,rgb(173, 207, 255), #ffffff 50%,#060606);
+	background-image: linear-gradient(144deg,rgb(59, 0, 254),50%,#737373);
+	box-shadow: 5px 5px 2px 2px rgba(0, 0, 255, .2);
 }
 
-.modal-body img{
-	width: 100%;
-	height: 100%;
-	margin: auto;
-}
 .modal-body button{
 	height: 250px;
 	width: 100px;
+}
+
+.wave1
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url('./img/footerimg.png');
+    background-size: 1000px 100px;
+    animation: animate2 40s linear infinite;
+    animation-delay: 0.9s;
+}
+.wave2
+{
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    opacity: 0.7;
+    background: url('./img/footerimg.png');
+    background-size: 1000px 100px;
+    animation: animate2 30s linear infinite;
+    animation-delay: 0.5s;
+}
+.wave3
+{
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    opacity: 0.5;
+    background: url('./img/footerimg.png');
+    background-size: 1000px 100px;
+    animation: animate2 15s linear infinite;
+    animation-delay: 0.25s;
+}
+
+@keyframes animate2
+{
+    0%
+    {
+        background-position-x: 0;
+    }
+    100%
+    {
+        background-position-x: -500px;
+    }
+}
+@keyframes animate2
+{
+    0%
+    {
+        background-position-x: 500px;
+    }
+    100%
+    {
+        background-position-x: -500px;
+    }
+}
+.skinDefault{
+	display:block;
+	position: relative;
+    left: 45%;
+    right: 45%;
+}
+.skinsImg{	
+	position: relative;
+    left: 45%;
+    right: 45%;
+	display:none;
 }
